# DeathStarBench

WORK/: requirements.txt
WORK/cfg/: .gitignore  bar.dot  baz.dot  callfp.dot  cfg.py  foo.dot  loopy.dot  main.dot  run.sh  setfp.dot  test.c
WORK/cfg/dsb/: .gitignore  cfg.py  requirements.txt  run.sh
WORK/cfg/dsb/US/: run.sh
WORK/run-us-sg/: .gitignore  DYNLIB.txt  README.md  config.py  copy_lib_commands.txt  libmongoc-1.0.so.0.0.0  make_ld_preload.py  new.sh  prune.sh  sg_mongo_new.sh  sg_mongo_prune.sh  sg_redis_new.sh  sg_redis_prune.sh  us_mongo_new.sh  us_mongo_prune.sh
WORK/usgraph/: usgraph.dot  usgraph.py  usgraph2.dot
socialNetwork/: CMakeLists.txt  Dockerfile  bring_build.sh  build_hiredis.sh  build_mongoc.sh  build_redispp.sh  docker-compose.yml  install_clang9toolchain.sh
socialNetwork/config/: jaeger-config.yml  service-config.json
socialNetwork/src/: CMakeLists.txt
socialNetwork/src/SocialGraphService/: CMakeLists.txt
socialNetwork/src/UniqueIdService/: CMakeLists.txt
socialNetwork/src/UserService/: CMakeLists.txt
